# tlhh-server

./: LICENSE  README.md
TLHHPlatform/: CMakeLists.txt  TLHHPlatform.sln
TLHHPlatform/Define/: app_api.h  buffer_parseh.h  command.h  command_define.h  console.h  const_define.h  my_exception.h  platform.h  pool.h  server_user_item.h  tlhh_buffer.h  tlhh_client_param.h  tlhh_define.h  tlhh_handler.h  utils.h
TLHHPlatform/Define/interface/: attemp_client_work.h  attemp_net_work.h  sql_client.h  sql_reset.h
TLHHPlatform/GameClient/: CMakeLists.txt  GameClient.vcxproj  GameClient.vcxproj.filters
TLHHPlatform/GameClient/include/: attemper_sink.h  define.h
TLHHPlatform/GameClient/src/: attemper_sink.cpp  main.cpp
TLHHPlatform/GameServer/: CMakeLists.txt  GameServer.vcxproj  GameServer.vcxproj.filters
TLHHPlatform/GameServer/include/: attemper_db.h  attemper_sink.h  define.h
TLHHPlatform/GameServer/src/: attemper_db.cpp  attemper_sink.cpp  test.cpp
TLHHPlatform/TLHHPlatform/: CMakeLists.txt  TLHHPlatform.vcxproj  TLHHPlatform.vcxproj.filters  tlhh_platform.def
TLHHPlatform/TLHHPlatform/include/: mysql_client.h  mysql_reset.h  server_user_manager.h  tcp_client.h  tcp_server.h  tcp_socket.h
TLHHPlatform/TLHHPlatform/include/shared/: client_work_engine.h  server_work_engine.h  sql_manager.h
TLHHPlatform/TLHHPlatform/src/: client_work_engine.cpp  mysql_client.cpp  mysql_reset.cpp  server_user_manager.cpp  server_work_engine.cpp  sql_manager.cpp  tcp_client.cpp  tcp_server.cpp  tcp_socket.cpp
